--- a/Restlet_JSFApplication/WebContent/index.xhtml
+++ b/Restlet_JSFApplication/WebContent/index.xhtml
@@ -1,24 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html">
+    xmlns:ui="http://java.sun.com/jsf/facelets"
+    xmlns:f="http://java.sun.com/jsf/core"
+    xmlns:h="http://java.sun.com/jsf/html"
+    xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-	<link rel="stylesheet"
-		href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
-		integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
-		crossorigin="anonymous"></link>
+    <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+        integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+        crossorigin="anonymous"></link>
 </h:head>
 <body>
-	<h1>Fahrzeuge:</h1>
-	<br />
-	<h:form>
-		<h:dataTable value="#{fahrzeugBean.all}" var="fahrzeug" styleClass="table">
-			<h:column>
-				<h:outputText value="#{fahrzeug.fahrgestellNr}" />
-			</h:column>
-		</h:dataTable>
-	</h:form>
+<p:dataTable value="#{fahrzeugBean.all}" var="fahrzeug" >
+	<p:column>
+		<f:facet name="header">
+			<h:outputText value="Marke"></h:outputText>
+		</f:facet>
+		<h:outputText value="#{fahrzeug.marke}"></h:outputText>
+	</p:column>
+</p:dataTable>
+    
+     
 </body>
 </html>
