--- a/Restlet_JSF/WebContent/header_menu.xhtml
+++ b/Restlet_JSF/WebContent/header_menu.xhtml
@@ -6,7 +6,7 @@
 
 	<h:form style="padding-bottom:10px">
 		<p:menubar>
-			<p:submenu label="Fahrzeuge in Saison">
+			<p:submenu label="Fahrzeuge in Saison" rendered="false">
 				<p:menuitem value="Anzeigen" action="show_fahrzeuge_in_saison" />
 			</p:submenu>
 
