--- a/Restlet_JSF/WebContent/header_menu.xhtml
+++ b/Restlet_JSF/WebContent/header_menu.xhtml
@@ -8,10 +8,12 @@
 		<p:menubar>
 			<p:submenu label="Fahrzeuge in Saison" rendered="#{empty loginBean.kundenNR}">
 				<p:menuitem value="Anzeigen" action="#{redirectBean.goToPage('show_fahrzeuge_in_saison')}" />
+				<p:menuitem value="Hinzufügen" action="#{redirectBean.goToPage('add_fahrzeuge_in_saison')}" />
 			</p:submenu>
 
 			<p:submenu label="Fahrzeug">
 				<p:menuitem value="Anzeigen" action="#{redirectBean.goToPage('show_fahrzeug')}" />
+				<p:menuitem value="Hinzufügen" action="#{redirectBean.goToPage('add_fahrzeug')}" />
 			</p:submenu>
 
 			<p:submenu label="Kunden" rendered="#{empty loginBean.kundenNR}">
@@ -31,7 +33,7 @@
 			</p:submenu>
 
 			<f:facet name="options">
-				<p:commandButton type="button" value="Logout" action="#{loginBean.logout()}" />
+				<p:commandButton value="Logout" action="#{loginBean.logout()}" />
 			</f:facet>
 		</p:menubar>
 	</h:form>
