--- a/Restlet_JSF/WebContent/header_menu.xhtml
+++ b/Restlet_JSF/WebContent/header_menu.xhtml
@@ -6,34 +6,64 @@
 
 	<h:form style="padding-bottom:10px">
 		<p:menubar>
-			<p:submenu label="Fahrzeuge in Saison" rendered="#{empty loginBean.kundenNR}">
-				<p:menuitem value="Anzeigen" action="#{redirectBean.goToPage('show_fahrzeuge_in_saison')}" />
-				<p:menuitem value="Hinzufügen" action="#{redirectBean.goToPage('add_fahrzeuge_in_saison')}" />
+			<p:submenu label="Fahrzeuge in Saison">
+				<p:menuitem value="Anzeigen"
+					action="#{redirectBean.goToPage('show_fahrzeuge_in_saison')}" />
+				<p:menuitem rendered="#{empty loginBean.kundenNR}"
+					value="Hinzufügen"
+					action="#{redirectBean.goToPage('add_fahrzeuge_in_saison')}" />
+				<p:menuitem rendered="#{empty loginBean.kundenNR}"
+					value="Bearbeiten"
+					action="#{redirectBean.goToPage('edit_fahrzeuge_in_saison')}" />
 			</p:submenu>
 
 			<p:submenu label="Fahrzeug">
-				<p:menuitem value="Anzeigen" action="#{redirectBean.goToPage('show_fahrzeug')}" />
-				<p:menuitem rendered="#{empty loginBean.kundenNR}" value="Hinzufügen" action="#{redirectBean.goToPage('add_fahrzeug')}" />
+				<p:menuitem value="Anzeigen"
+					action="#{redirectBean.goToPage('show_fahrzeug')}" />
+				<p:menuitem rendered="#{empty loginBean.kundenNR}"
+					value="Hinzufügen"
+					action="#{redirectBean.goToPage('add_fahrzeug')}" />
+				<p:menuitem rendered="#{empty loginBean.kundenNR}"
+					value="Bearbeiten"
+					action="#{redirectBean.goToPage('edit_fahrzeug')}" />
 			</p:submenu>
 
 			<p:submenu label="Kunden" rendered="#{empty loginBean.kundenNR}">
-				<p:menuitem value="Anzeigen" action="#{redirectBean.goToPage('show_kunde')}" />
-				<p:menuitem value="Hinzufügen" action="#{redirectBean.goToPage('add_kunde')}" />
+				<p:menuitem value="Anzeigen"
+					action="#{redirectBean.goToPage('show_kunde')}" />
+				<p:menuitem value="Hinzufügen"
+					action="#{redirectBean.goToPage('add_kunde')}" />
+				<p:menuitem value="Bearbeiten"
+					action="#{redirectBean.goToPage('edit_kunde')}" />
 			</p:submenu>
 
 			<p:submenu label="Mietfahrzeug">
-				<p:menuitem value="Anzeigen" action="#{redirectBean.goToPage('show_mietfahrzeug')}" />
-				<p:menuitem value="Hinzufügen" action="#{redirectBean.goToPage('add_mietfahrzeug')}" />
+				<p:menuitem value="Anzeigen"
+					action="#{redirectBean.goToPage('show_mietfahrzeug')}" />
+				<p:menuitem value="Hinzufügen"
+					action="#{redirectBean.goToPage('add_mietfahrzeug')}" />
+				<p:menuitem value="Bearbeiten"
+					action="#{redirectBean.goToPage('edit_mietfahrzeug')}" />
 			</p:submenu>
 
 			<p:submenu label="Saison">
-				<p:menuitem value="Anzeigen" action="#{redirectBean.goToPage('show_saison')}" />
-				<p:menuitem rendered="#{empty loginBean.kundenNR}" value="Hinzufügen" action="#{redirectBean.goToPage('add_saison')}" />
+				<p:menuitem value="Anzeigen"
+					action="#{redirectBean.goToPage('show_saison')}" />
+				<p:menuitem rendered="#{empty loginBean.kundenNR}"
+					value="Hinzufügen" action="#{redirectBean.goToPage('add_saison')}" />
+				<p:menuitem rendered="#{empty loginBean.kundenNR}"
+					value="Bearbeiten" action="#{redirectBean.goToPage('edit_saison')}" />
 			</p:submenu>
 
 			<p:submenu label="Standort">
-				<p:menuitem value="Anzeigen" action="#{redirectBean.goToPage('show_standort')}" />
-				<p:menuitem rendered="#{empty loginBean.kundenNR}" value="Hinzufügen" action="#{redirectBean.goToPage('add_standort')}" />
+				<p:menuitem value="Anzeigen"
+					action="#{redirectBean.goToPage('show_standort')}" />
+				<p:menuitem rendered="#{empty loginBean.kundenNR}"
+					value="Hinzufügen"
+					action="#{redirectBean.goToPage('add_standort')}" />
+				<p:menuitem rendered="#{empty loginBean.kundenNR}"
+					value="Bearbeiten"
+					action="#{redirectBean.goToPage('edit_standort')}" />
 			</p:submenu>
 
 			<f:facet name="options">
