--- a/Restlet_JSF/WebContent/ListAllPages/fahrzeug.xhtml
+++ b/Restlet_JSF/WebContent/ListAllPages/fahrzeug.xhtml
@@ -11,7 +11,7 @@
 	<p:dataTable var="fahrzeug" value="#{fahrzeugBean.all}"
 		style="margin-bottom:40px">
 		<f:facet name="header">
-            Fahrzeug
+            Fahrzeuge
         </f:facet>
 
 		<p:column headerText="Fahrgestellnummer">
