--- a/Restlet_JSF/WebContent/ListAllPages/kunde.xhtml
+++ b/Restlet_JSF/WebContent/ListAllPages/kunde.xhtml
@@ -11,7 +11,7 @@
 	<p:dataTable var="kunde" value="#{kundeBean.all}"
 		style="margin-bottom:40px">
 		<f:facet name="header">
-            Kunde
+            Kunden
         </f:facet>
 
 		<p:column headerText="ID">
