--- a/Restlet_JSF/WebContent/CreatePages/add_fahrzeuge_in_saison.xhtml
+++ b/Restlet_JSF/WebContent/CreatePages/add_fahrzeuge_in_saison.xhtml
@@ -7,22 +7,10 @@
 
 <h:head></h:head>
 <body>
-	<script type="text/javascript">
-    function handleLoginRequest(xhr, status, args) {
-        if(args.validationFailed || !args.loggedIn) {
-            PF('dlg').jq.effect("shake", {times:5}, 100);
-        }
-        else {
-            PF('dlg').hide();
-            $('#loginLink').fadeOut();
-        }
-    }
-</script>
-
 	<ui:include src="../header_menu.xhtml" />
 	<h:form>
 		<h1>Fahrzeuge in Saisonen hinzufügen</h1>
-		<p:growl id="growl" showDetail="true" sticky="true" />
+		<p:growl id="growl" showDetail="true" />
 		<h:panelGrid columns="2" cellpadding="5">
 			<p:outputLabel for="fahrgestellNr" value="Fahrgestellnummer: " />
 			<p:selectOneMenu id="fahrgestellNr" value="#{fahrgestellNr}">
