--- a/Restlet_JSF/WebContent/CreatePages/add_kunde.xhtml
+++ b/Restlet_JSF/WebContent/CreatePages/add_kunde.xhtml
@@ -7,22 +7,10 @@
 
 <h:head></h:head>
 <body>
-<script type="text/javascript">
-    function handleLoginRequest(xhr, status, args) {
-        if(args.validationFailed || !args.loggedIn) {
-            PF('dlg').jq.effect("shake", {times:5}, 100);
-        }
-        else {
-            PF('dlg').hide();
-            $('#loginLink').fadeOut();
-        }
-    }
-</script>
-
 	<ui:include src="../header_menu.xhtml" />
 	<h:form>
 		<h1>Kunde hinzufügen</h1>
-		<p:growl id="growl" showDetail="true" sticky="true" />  
+		<p:growl id="growl" showDetail="true" />
 		<h:panelGrid columns="2" cellpadding="5">
 			<p:outputLabel for="vorname" value="Vorname: " />
 			<p:inputMask id="vorname" value="#{vorname}" />
@@ -32,16 +20,18 @@
 
 			<p:outputLabel for="strasse" value="Straße:" />
 			<p:inputMask id="strasse" value="#{strasse}" />
-			
+
 			<p:outputLabel for="plz" value="PLZ: " />
-			<p:inputMask id="plz" value="#{plz}" maxlength="2" mask="9?9999"/>
-			
+			<p:inputMask id="plz" value="#{plz}" maxlength="2" mask="9?9999" />
+
 			<p:outputLabel for="ort" value="Ort:" />
 			<p:inputMask id="ort" value="#{ort}" />
-			
+
 
 			<p:commandButton value="Reset" type="reset" />
-			<p:commandButton value="Submit" action="#{kundeBean.add(vorname, nachname, strasse, plz, ort)}" update="@form"/>
+			<p:commandButton value="Submit"
+				action="#{kundeBean.add(vorname, nachname, strasse, plz, ort)}"
+				update="@form" />
 		</h:panelGrid>
 	</h:form>
 </body>
