changed home screen

--- a/Restlet_JSF/WebContent/home.xhtml
+++ b/Restlet_JSF/WebContent/home.xhtml
@@ -8,6 +8,14 @@
 <h:head></h:head>
 <body>
 	<ui:include src="header_menu.xhtml" />
-	<h1>HOME</h1>
+	<div class="p-grid p-justify-center">
+		<div class="p-col-1">
+			<h1>Happy WoMo</h1>
+			<img
+				src="https://upload.wikimedia.org/wikipedia/commons/b/ba/2016_3080_9814_VARIO_Star_800_MAN_TGL_8220.jpg"
+				alt="WOMO" />
+		</div>
+	</div>
+
 </body>
 </html>
