--- a/Restlet_JSF/WebContent/EditPages/edit_kunde.xhtml
+++ b/Restlet_JSF/WebContent/EditPages/edit_kunde.xhtml
@@ -83,6 +83,10 @@
 			<p:column style="width:35px">
 				<p:rowEditor />
 			</p:column>
+			
+			<p:column style="width:35px">
+				<p:commandButton update="@form" icon="fa fa-trash" action="#{kundeBean.delete(kunde)}"  />
+			</p:column>
 		</p:dataTable>
 	</h:form>
 </body>
