--- a/Restlet_JSF/WebContent/EditPages/edit_mietfahrzeug.xhtml
+++ b/Restlet_JSF/WebContent/EditPages/edit_mietfahrzeug.xhtml
@@ -64,6 +64,10 @@
 			<p:column style="width:35px">
 				<p:rowEditor />
 			</p:column>
+			
+			<p:column style="width:35px">
+				<p:commandButton update="@form" icon="fa fa-trash" action="#{mietfahrzeugBean.delete(fahrzeug)}"  />
+			</p:column>
 		</p:dataTable>
 	</h:form>
 </body>
