--- a/Restlet_JSF/WebContent/EditPages/edit_standort.xhtml
+++ b/Restlet_JSF/WebContent/EditPages/edit_standort.xhtml
@@ -73,6 +73,10 @@
 			<p:column style="width:35px">
 				<p:rowEditor />
 			</p:column>
+			
+			<p:column style="width:35px">
+				<p:commandButton update="@form" icon="fa fa-trash" action="#{standortBean.delete(standort)}"  />
+			</p:column>
 		</p:dataTable>
 	</h:form>
 </body>
